# Learning_Codes

./: .gitignore  Addition.cpp  CMakeLists.txt  Cpp_Variable_Types.cpp  Division.cpp  Pet_project1.cpp  README.md  Subtraction.cpp  git_setup.sh  hello.cpp  mpi_practice.cpp
Calculator_Project/: Multiply.cpp  algebra.h
Eng_Analysis_AME_525/: example.tex
Eng_Analysis_AME_525/hw1/: hw1.tex
Eng_Analysis_AME_525/hw10/: hw10.tex
Eng_Analysis_AME_525/hw11/: hw11.tex
Eng_Analysis_AME_525/hw12/: hw12.tex
Eng_Analysis_AME_525/hw2/: hw2.tex
Eng_Analysis_AME_525/hw3/: hw3.tex
Eng_Analysis_AME_525/hw4/: hw4.tex
Eng_Analysis_AME_525/hw5/: hw5.tex
Eng_Analysis_AME_525/hw6/: hw6.tex
Eng_Analysis_AME_525/hw7/: hw7.tex
Eng_Analysis_AME_525/hw8/: hw8.tex
Eng_Analysis_AME_525/hw9/: hw9.tex
FEA/: CMakeLists.txt  do_config.sh
FEA/HW1/: CMakeLists.txt  do_config.sh
FEA/HW1/src/: CMakeLists.txt  driver.cpp  driver.hpp  eig_wrap.hpp  element1D.cpp  (+10 more)
FEP/a1/: a1_operation3_results.txt  a1_operation5_results.txt  a1_operation6_results.txt  a1tet.cc
FEP/a2/: a2.cc
a1/: a1_operation1_results.txt  a1_operation2_results.txt  a1_operation4_results.txt  a1mix.cc  a1quad.cc  a1tet.cc  run.sh
a1/outQuad/: outQuad.pvtu
a2/: a2.cc
a2/writeup/: a2_report.aux
a3/: Makefile  a3.cc  build.sh  run.sh
a3/writeup/: a3_report.tex
a4/: CMakeLists.txt  TODO  a4.cc  a4_old.cc  cmake_install.cmake  control_template.ctrl  linear_four_sided.ctrl  run.sh  setup.sh
a4/aux/: do_config.sh  env-scorec.sh  make_mesh.sh
a4/ctrl_files/: control_template.ctrl  linear_four_sided.ctrl  linear_three_sided.ctrl
a4/src/: A4_BodyLoads.cpp  A4_BodyLoads.hpp  A4_Control.cpp  A4_DBCs.cpp  A4_Defines.hpp  A4_ElasticStiffness.cpp  A4_ElasticStiffness.hpp  A4_FESolver.cpp  A4_FESolver.hpp  A4_LinSolve.cpp  A4_NBCs.cpp  A4_NBCs.hpp  A4_PostProc.cpp  A4_PostProc.hpp  A4_Util.cpp  A4_Util.hpp  CMakeLists.txt  a4.cc
a4/write_up/: RMS.txt  a4.tex
bjarne_text/: README.md
bjarne_text/chapter_2/: hello_world.cpp  std_lib_facilities.h
bjarne_text/chapter_3/: bjarne.hpp  compare_names.cpp  first_second.cpp  float.cpp  hello_name.cpp  name_age.cpp  unsafe_conv.cpp
bjarne_text/chapter_4/: bleep.cpp  char_table.cpp  temps.cpp
bjarne_text/chapter_5/: note.txt
bjarne_text/chapter_6/: calc_1.cpp  calc_2.cpp  calc_3.cpp
cyphers/: CMakeLists.txt  README.md  do_config.sh  example.target
cyphers/src/: CMakeLists.txt  cypher_class.cpp  cypher_class.hpp  cypher_main.cpp  input_handler.cpp  input_handler.hpp  wheel.cpp  wheel.hpp
hello-world/: hello.cpp
latex_practice/: README.md
latex_practice/CV/: cv_clough.tex
latex_practice/journal_practice/: journal.tex
latex_practice/triangles/: triangles.aux  triangles.tex
learn_python_org/: README
learn_python_org/basic_operators/: exercise.py  list_operators.py  power.py  remainder.py  string_operations.py
learn_python_org/basic_string_operations/: exercise.py  string_operations.py
learn_python_org/class_objects/: class_objects.py  exercise.py
learn_python_org/conditions/: bools.py  exercise.py
learn_python_org/dictionaries/: dictionary.py  exercise.py
learn_python_org/functions/: exercise.py  functions.py
learn_python_org/hello_world/: goodbye.py  indent.py
learn_python_org/lists/: append.py  exercise.py  out_of_bounds.py
learn_python_org/loops/: exercise.py  loops.py
learn_python_org/string_formatting/: exercise.py  formatting.py
learn_python_org/variables_types/: apostrophes.py  bad_operator.py  exercise.py  float.py  int.py  simple_operators.py  simultaneous_assignments.py  string.py
mpi_practice/: mpi_2.cpp  mpi_3.cpp
testing/: a.out  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
trilinos/: CMakeLists.txt  belos_practice.cpp  tpetra1.cpp  tpetra2.cpp  tpetra6.cpp  tpetra7.cpp
(+68 files in other folders)
